[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/SoundHandler.gd" type="Script" id=1]
[ext_resource path="res://Audio/Seina - Witch's Diary.ogg" type="AudioStream" id=2]
[ext_resource path="res://Audio/Drop.ogg" type="AudioStream" id=3]
[ext_resource path="res://Audio/Coke.ogg" type="AudioStream" id=4]
[ext_resource path="res://Audio/Jump.ogg" type="AudioStream" id=5]
[ext_resource path="res://Audio/Click.ogg" type="AudioStream" id=6]
[ext_resource path="res://Audio/EnemyHitPlayer.ogg" type="AudioStream" id=7]
[ext_resource path="res://Audio/PlayerHitPlayer.ogg" type="AudioStream" id=8]
[ext_resource path="res://Audio/Shoot.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audio/Walk.ogg" type="AudioStream" id=10]
[ext_resource path="res://Audio/Win.ogg" type="AudioStream" id=11]
[ext_resource path="res://Audio/Land.ogg" type="AudioStream" id=12]
[ext_resource path="res://Audio/Lose.ogg" type="AudioStream" id=13]

[node name="SoundHandler" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
drop_sound = ExtResource( 3 )
click_sound = ExtResource( 6 )
shoot_sound = ExtResource( 9 )
enemy_hit_sound = ExtResource( 7 )
player_hit_sound = ExtResource( 8 )
walk_sound = ExtResource( 10 )
jump_sound = ExtResource( 5 )
land_sound = ExtResource( 12 )
win_sound = ExtResource( 11 )
lose_sound = ExtResource( 13 )
greenliquid_sound = ExtResource( 4 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="DropPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]

[node name="ShootPlayer" type="AudioStreamPlayer" parent="."]

[node name="EnemyHitPlayer" type="AudioStreamPlayer" parent="."]

[node name="PlayerHitPlayer" type="AudioStreamPlayer" parent="."]

[node name="GroundPlayer" type="AudioStreamPlayer" parent="."]

[node name="EndPlayer" type="AudioStreamPlayer" parent="."]

[node name="LeaveGroundPlayer" type="AudioStreamPlayer" parent="."]
